# slurm_spank_pm_msrsafe

./: CMakeLists.txt  LICENSE  README.md
include/: pm_msrsafe.h
src/: CMakeLists.txt  common.c  cpufreq.c  intel_pstate.c  msrsafe.c  pm.c  pm_msrsafe.c  slurm.c
